# predicting_heart_disease

./: .env.example  Dockerfile.mlflow  Makefile  docker-compose.yml  pyproject.toml
src/config/: mlflow_init.py
src/models/: gradient_boosting.py  knn.py  logistic_regression.py  model.py  random_forest.py  svm.py  xgboost_.py
src/preprocessing/: preprocess.py
src/utils/: download_dataset.py
